--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ sudo: false
 rust: stable
 cache: cargo
 env:
-  global:
-  - CARGO_VENDOR_VERSION=0.1.23
+  global: CARGO_VENDOR_VERSION=0.1.23
 matrix:
   include:
     - env: TARGET=x86_64-unknown-linux-musl
@@ -18,14 +17,24 @@ matrix:
     #      packages:
     #        - gcc-arm-linux-gnueabihf
 install:
-- curl -sSfL https://github.com/alexcrichton/cargo-vendor/releases/download/${CARGO_VENDOR_VERSION}/cargo-vendor-${CARGO_VENDOR_VERSION}-x86_64-unknown-linux-musl.tar.gz
-  | tar xzf - -C $HOME/bin --strip-components=1
-- cargo vendor --version
-- rustup target add $TARGET
+  - curl -sSfL https://github.com/alexcrichton/cargo-vendor/releases/download/${CARGO_VENDOR_VERSION}/cargo-vendor-${CARGO_VENDOR_VERSION}-x86_64-unknown-linux-musl.tar.gz
+    | tar xzf - -C $HOME/bin --strip-components=1
+  - cargo vendor --version
+  - rustup target add $TARGET
 script:
-- if [[ $TARGET == "aarch64-unknown-linux-musl" ]]; then sudo apt-get install -y --force-yes --no-install-recommends gcc-aarch64-linux-gnu libc6-arm64-cross libc6-dev-arm64-cross; fi
-- cargo build --release --target $TARGET --locked
-- strip target/$TARGET/release/nix-user-chroot
+  - if [[ $TARGET == "aarch64-unknown-linux-musl" ]]; then sudo apt-get install -y --force-yes --no-install-recommends gcc-aarch64-linux-gnu libc6-arm64-cross libc6-dev-arm64-cross; fi
+  - cargo build --release --target $TARGET --locked
+  - strip target/$TARGET/release/nix-user-chroot
+before_deploy:
+  - name="cntr-$TRAVIS_TAG-$TARGET"
+  - depsname="cntr-src-$TRAVIS_TAG"
+  - install -D target/$TARGET/release/nix-user-chroot $name/nix-user-chroot
+  - install -D target/$TARGET/release/nix-user-chroot nix-user-chroot-bin-$TRAVIS_TAG-$TARGET
+  - mkdir $depsname
+  - git archive HEAD | tar -x -C $depsname
+  - cargo vendor
+  - mv vendor $depsname/
+  - tar czvf $depsname.tar.gz $depsname
 notifications:
   email:
     on_success: never
