--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,15 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
       - name: Test
         uses: actions-rs/cargo@v1
+        if: matrix.target == 'x86_64-unknown-linux-gnu' || matrix.target == 'x86_64-unknown-linux-musl' || matrix.target == 'i686-unknown-linux-musl'
         with:
           command: test
+          args: --target ${{ matrix.target }}
+      - name: Build
+        uses: actions-rs/cargo@v1
+        if: matrix.target != 'x86_64-unknown-linux-gnu' && matrix.target != 'x86_64-unknown-linux-musl' && matrix.target != 'i686-unknown-linux-musl'
+        with:
+          command: build
           args: --target ${{ matrix.target }}
       - name: Install cargo-cache
         uses: actions-rs/install@v0.1
