--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "nix-user-chroot"
-version = "1.0.3"
+description = "Install & Run nix without root permissions"
+version = "1.1.0"
 authors = ["Jörg Thalheim <joerg@thalheim.io>"]
 edition = "2018"
 
