--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ authors = ["Jörg Thalheim <joerg@thalheim.io>"]
 edition = "2018"
 
 [dependencies]
-nix = "0.19.*"
-libc = "*"
+nix = "0.20.0"
+libc = "0.2.88"
